# ai-scratchpad

./: .gitignore  =2.1.0  CLAUDE.md  skills.toml
.claude/: settings.json
claude-export/: CLAUDE.md
knit-wit/: .env.example  .gitignore  ACCESSIBILITY_SUMMARY.md  API_DOCUMENTATION_VERIFICATION.md  BUG-2-IMPLEMENTATION-SUMMARY.md  CHANGELOG.md  CLAUDE.md  (+11 more)
knit-wit/apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SENTRY_SETUP.md  coverage.json  dev.sh  pyproject.toml  requirements.txt
knit-wit/apps/api/app/: __init__.py  main.py
knit-wit/apps/api/app/api/v1/: __init__.py
knit-wit/apps/api/app/api/v1/endpoints/: __init__.py  export.py  parser.py  patterns.py  telemetry.py  visualization.py
knit-wit/apps/api/app/core/: __init__.py  config.py  logging_config.py  sentry_config.py
knit-wit/apps/api/app/middleware/: __init__.py  correlation_id.py
knit-wit/apps/api/app/models/: frontend_dsl.py  visualization.py
knit-wit/apps/api/app/services/: __init__.py  export_service.py  parser_service.py  telemetry_service.py  visualization_service.py
knit-wit/apps/api/app/utils/: dsl_converter.py
knit-wit/apps/api/scripts/: init-db.sql
knit-wit/apps/api/tests/: __init__.py  conftest.py  test_main.py
knit-wit/apps/api/tests/integration/: __init__.py  test_error_tracking.py  test_export_api.py  test_parser_api.py  test_telemetry_api.py  test_visualization_api.py
knit-wit/apps/api/tests/unit/: test_export_service.py  test_logging_config.py  test_parser_service.py  test_sentry_config.py  test_telemetry_service.py  test_visualization_service.py
(+273 files in other folders)
